# go-agent

./: .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  GoAgent项目评估报告.docx  GoAgent项目评估报告.md  LICENSE  Makefile  README.md  README_zh.md  bugs.md  coverage.out  go.mod  go.sum  performance_summary.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  integration-test.yml
api/: ARCHITECTURE.md  MIGRATION.md  README.md  client.go  errors.go  errors_test.go
api/agent/: errors.go  errors_test.go  service.go  service_test.go
api/client/: client.go  client_test.go  config.go  config_test.go  errors.go  errors_test.go  simple.go  unified.go  workflow.go
api/core/: agent.go  agent_test.go  llm.go  llm_test.go  memory.go  memory_test.go  retrieval.go  retrieval_test.go  types.go  types_test.go
api/errors/: common.go  common_test.go
api/experience/: conflict_resolver.go  conflict_resolver_test.go  distillation_service.go  distillation_service_test.go  ranked_experience.go  ranking_service.go  ranking_service_test.go  task_result.go
api/handler/: stream.go  stream_bench_test.go  stream_test.go
api/memory/: distillation.go  distillation_service.go  distillation_service_test.go  distillation_test.go  errors.go  errors_test.go  service.go  service_test.go
api/retrieval/: errors.go  errors_test.go  service.go  service_test.go
api/router/: router.go
benchmarks/: benchmark_report.md  benchmark_results.json
cmd/check_rls/: main.go
cmd/create_distilled_table/: main.go
cmd/debug_memories/: main.go
cmd/insert_test/: main.go
cmd/migrate_goagent/: main.go
cmd/setup_test_db/: main.go
configs/: query_rewrite_config.yaml  synonyms.yaml
docs/: API_REFERENCE.md  CATEGORIES.md  README.md  arch.md  memory-distillation.md  quick_start.md  retrieval-strategy_zh.md  testing_guide.md
docs/AudieReport/: GoAgent项目评估报告.md  audit-report.md
docs/architecture/: arch.md  arch_en.md  retrieval-strategy.md
docs/bug&ques/: bug_en.md  bug_zh.md
docs/development/: integration_guide.md  integration_guide_en.md  performance_tuning.md  performance_tuning_en.md  testing_guide_en.md
docs/engine/: en.md  zh.md
docs/features/: experience-system.md  experience-system_en.md  llm_query_rewrite.md  memory-distillation-test.md  memory-distillation_en.md
docs/guides/: faq.md  faq_en.md  quick_start_en.md
docs/llm/: en.md
docs/memory/: en.md  zh.md
docs/protocol/: en.md
docs/ratelimit/: en.md  zh.md
docs/shutdown/: en.md  zh.md
docs/storage/: PGVECTOR_TYPE_CONVERSION.md  api.md  api_en.md  en.md  zh.md
docs/tools/: en.md  zh.md
examples/: integration_example.go
examples/capability-demo/: README.md  main.go  test_cases.txt  test_record.txt
examples/devagent/: README.md  main.go
examples/devagent_newapi/: main.go  main_test.go
examples/experience-bilingual/: README.md  main.go  performance_summary.txt
examples/experience-demo/: .gitignore  README.md  main.go
scripts/: run_example.sh  setup_test_db.sh
services/embedding/: .env.example  Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  setup.sh  start.sh  stop.sh  test_service.py
(+408 files in other folders)
